--- a/src/main/webapp/resources/css/pitch.css
+++ b/src/main/webapp/resources/css/pitch.css
@@ -1,7 +1,7 @@
 body {
     background-color: #eee;
     color: darkblue;
-    background-image: url("../pitch4.jpg");
+    background-image: url("../pitch.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
